--- a/gtx2/css/stylegtx.css
+++ b/gtx2/css/stylegtx.css
@@ -349,6 +349,10 @@ tr#lista td {
     cursor: pointer;
 }
 
+#baguncinha {
+    gap: 4px;
+}
+
 #perfil {
     box-shadow: 0px 0px 10px black;
     border-radius: 7px;
