--- a/Public/Css/stylegtx.css
+++ b/Public/Css/stylegtx.css
@@ -200,9 +200,28 @@ h3 {
 }
 
 #frameRecuperaSenha {
-    border-radius: 7px;
+    border-top: 0px;
+    border-radius: 0px 0px 7px 7px;
     width: 396px;
-    height: 292.5px;
+    height: 142.5px;
+}
+
+#divBotaoFecharRecuperaSenha {
+    background-color: #525252;
+    padding: 2px;
+    display: flex;
+    justify-content: flex-end;
+    border-top: solid 2px white;
+    border-right: solid 2px white;
+    border-left: solid 2px white;
+    border-radius: 7px 7px 0px 0px;
+}
+
+#botaoFecharRecuperaSenha {
+    color: white;
+    background-color: red;
+    border: solid 1px white;
+    border-radius: 5px;
 }
 
 /** imagem no index **/
@@ -510,6 +529,13 @@ tr#lista td {
 
 .formatAcao {
     width: 200px;
+}
+
+#formsAcaoNovaSenha {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 4px;
 }
 
 #tabAdmMembros {
