--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,551 +1,3 @@
-@charset "UTF-8";
-
-html, body {
-    height: 100vh;
-    min-width: 1280px;
-    margin: 0;
-    background-color: black;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-h1 {
-    margin: 0px;
-}
-
-h3 {
-    margin: 0px;
-}
-
-.cabecalho {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    border-radius: 0 0 7px 7px;
-    background-color: #1FDBB7;
-}
-
-.navegador nav{
-    background-color: #262626;
-    border-radius: 0 0 7px 7px;
-}
-
-.navegador ul{
-    height: 50px;
-    display: flex;
-    justify-content: end;
-    margin: 0px 250px;
-}
-
-.navegador ul li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding: 0 5px 0 5px;
-    border-radius: 7px;
-    background-color: transparent;
-    transition: background-color 0.5s;
-}
-
-.navegador ul li:hover {
-    background-color: black;
-}
-
-.aNavegador {
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-    text-shadow: 0 0 2px #1FDBB7;
-    transition: color 0.5s, text-shadow 0.5s;
-}
-
-.aNavegador:hover {
-    color: rgb(187, 187, 187);
-    text-shadow: 0 0 15px #25fad3;
-}
-
-@media only screen and (max-width: 900px) {
-    .principal {
-        min-height: calc(2800px - 200px);
-        background-color: #525252;
-        border-radius: 0 0 7px 7px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-@media only screen and (min-width: 901px) {
-    .principal {
-        min-height: calc(100% - 200px);
-        background-color: #525252;
-        border-radius: 0 0 7px 7px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-#separador {
-    display: flex;
-    flex-direction: row;
-}
-
-#quemsomos {
-    text-align: center;
-    width: 33.33%;
-    padding: 10px;
-    background-color: silver;
-    border-radius: 7px;
-    font-size: 20px;
-}
-
-#formularios {
-    display: flex;
-    justify-content: center;
-    background-color: #262626;
-    height: 250px;
-    width: 100%;
-    color: white;
-    padding: 10px;
-    border-radius: 0 0 7px 7px;
-}
-
-#formularios h1 {
-    text-align: center;
-}
-
-#login form {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-}
-
-#login input {
-    margin: 3px 0 3px 0;
-    width: 210px;
-    height: 20px;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#login label{
-    display: inline-block;
-    width: 45px;
-}
-
-#login input#login {
-    width: 93px;
-    margin-left: 49px;
-}
-
-#login button {
-    width: 93px;
-    cursor: pointer;
-    height: 20px;
-    border: 0;
-    border-radius: 5px;
-}
-
-#respostaLogin {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
-}
-
-#recrut form {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-}
-
-#recrut input {
-    margin: 3px 0 3px 0;
-    width: 210px;
-    height: 20px;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#recrut label{
-    display: inline-block;
-    width: 75px;
-}
-
-#recrut input#solicitar {
-    width: 140px;
-    margin-left: 79px;
-}
-
-#recrut select {
-    width: 140px;
-}
-
-#respostaRecrut {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 80px;
-}
-
-#recuperaSenhaFrame {
-    position: absolute;
-    top: 100px;
-    left: 21%;
-    z-index: 2;
-}
-
-#frameRecuperaSenha {
-    border-top: 0px;
-    border-radius: 0px 0px 7px 7px;
-    width: 396px;
-    height: 142.5px;
-}
-
-#divBotaoFecharRecuperaSenha {
-    background-color: #525252;
-    padding: 2px;
-    display: flex;
-    justify-content: flex-end;
-    border-top: solid 2px white;
-    border-right: solid 2px white;
-    border-left: solid 2px white;
-    border-radius: 7px 7px 0px 0px;
-}
-
-#botaoFecharRecuperaSenha {
-    color: white;
-    background-color: red;
-    border: solid 1px white;
-    border-radius: 5px;
-}
-
-/** imagem no index **/
-#imagemind {
-	display: flex;
-	justify-content: center;
-    align-items: center;
-	min-height: 405px;
-}
-
-#imagemind img {
-	height: 300px;
-	width: 300px;
-	transition: height 0.7s, width 0.7s;
-}
-
-#imagemind img:hover {
-	height: 400px;
-	width: 400px;
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100px;
-    color: white;
-    background-color: black;
-}
-
-footer p {
-    margin: 5px;
-}
-
-/** MEMBROS **/
-#membros {
-    margin: 30px 0 88px;
-    border-radius: 7px 7px 0 0;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    background-color: #bbbbbb;
-    border-collapse: collapse;
-    overflow: hidden;
-    color: white;
-}
-
-caption {
-    margin-bottom: 30px;
-    font-size: 24px;
-    color: white;
-}
-
-#membros thead th{
-    padding: 12px 15px;
-    color: white;
-}
-
-#membros thead tr{
-    background-color: #1FDBB7;
-}
-
-tr#lista td {
-    padding: 16px 15px;
-    text-align: center;
-    font-size: 18px;
-}
-
-#linkcanal {
-    color: white;
-    transition: text-shadow 0.5s;
-}
-
-#linkcanal:hover {
-    text-shadow: 0 0 15px #1fdbb9a8;
-}
-
-#membros tr:last-of-type {
-    border-bottom: 2px solid #1FDBB7;
-}
-
-#membros tr:nth-of-type(even) {
-    background-color: #cacaca;
-}
-
-/* Videos na sala de video */
-
-#tituloVideos {
-    display: flex;
-    text-align: center;
-    padding-top: 28px;
-    height: 58px;
-    color:  white;
-}
-
-#videos {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
-#videos video {
-    height: 240px;
-    width: 426px;
-    transition: height 0.7s, width 0.7s;
-}
-
-#videos video:hover {
-    height: 360px;
-    width: 640px;
-}
-
-/* Area logada */
-
-#botaoSair {
-    background-color: transparent;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 20px;
-    color: white;
-    text-shadow: 0 0 2px #1FDBB7;
-    transition: color 0.5s, text-shadow 0.5s;
-    font-family: 'Times New Roman', Times, serif;
-    cursor: pointer;
-}
-
-#boasVindas {
-    align-self: self-start;
-    margin: 10px;
-    color: white;
-}
-
-#boasVindas a {
-    color: white;
-    text-decoration: none;
-    text-decoration-line: none;
-}
-
-#dadosPessoais {
-    display: flex;
-    gap: 12px;
-}
-
-#dadosPessoais input {
-    height: 20px;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#canalStream {
-    box-shadow: 0px 0px 10px black;
-    border-radius: 7px;
-    padding: 10px;
-    color: white;
-}
-
-#canalStream div {
-    margin-bottom: 5px;
-    display: flex;
-}
-
-#canalStream h3 {
-    margin: 0 0 8px 8px;
-}
-
-#canalStream label {
-    width: 80px;
-}
-
-#salvarStream {
-    margin-left: 80px;
-    cursor: pointer;
-}
-
-#baguncinha {
-    gap: 4px;
-}
-
-#perfil {
-    box-shadow: 0px 0px 10px black;
-    border-radius: 7px;
-    padding: 10px;
-    color: white;
-    gap: 4px;
-}
-
-#perfil div {
-    margin-bottom: 5px;
-    display: flex;
-}
-
-#perfil h3 {
-    margin: 0 0 8px 8px;
-}
-
-#perfil label {
-    width: 80px;
-}
-
-.salvarPerfil {
-    margin-left: 80px;
-}
-
-#rodapeLogado {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 100px;
-    color: white;
-    background-color: black;
-}
-
-#rodapeLogado div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 5px;
-}
-
-#versiona {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    align-self: self-end;
-    margin: 5px;
-}
-
-#versiona div {
-    display: flex;
-    flex-direction: row;
-}
-
-#versiona label {
-    width: 45px;
-    margin-right: 2px;
-}
-
-#versiona input {
-    margin-left: 52px;
-}
-
-#rodapeLogado p {
-    margin: 5px;
-}
-
-/** tabelas de adm */
-
-#notice {
-    display: flex;
-    width: 100%;
-    margin-top: 15px;
-    color: white;
-    padding-bottom: 10px;
-}
-
-#eventosLogado {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    position: absolute;
-    padding: 10px;
-}
-
-#tabelasLogado {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto 0 auto;
-    padding: 10px;
-    color: white;
-}
-
-#notice caption {
-    margin: 10px;
-}
-
-#notice tr {
-    height: 25px;
-}
-
-.formatID {
-    width: 23px;
-}
-
-.formatNome {
-    width: 173px;
-}
-
-.formatNick {
-    width: 108px;
-}
-
-.formatPlataforma {
-    width: 83px;
-}
-
-.formatStatus {
-    width: 123px;
-}
-
-.formatAcao {
-    width: 200px;
-}
-
-#formsAcaoNovaSenha {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 4px;
-}
-
-#tabAdmMembros {
-    text-align: center;
-    text-justify: auto;
-    box-shadow: 0 0 10px black;
-    border-radius: 7px;
-    padding: 7px;
-}
-
-.formatNoresult {
-    width: 500px;
+body{
+    background-color: blue;
 }
